# Quadruped_Robot_Navigation_Framework

./: .gitignore  README.md
docs/: 2026-07-03-wheeled-to-legged-adaptation-design.md  AGENTS.md  PROJECT_DOC.md  PROJECT_ISSUES.md  README.md  risk-map.md  symbol-index.md  后续工作指南.md  新手小白入门指南.md  阅读顺序指南.md
docs/modules/: driver_sim_tools.md  livox_ros_driver2.md  loam_interface.md  localization_and_perception.md  nav2_plugins.md  nav_bringup.md  odometry_bridge.md  omni_pid_pursuit_controller.md  perception_utils.md  point_lio.md  sim_and_tools.md  terrain_analysis.md
docs/superpowers/specs/: 2026-06-30-sentry-to-navigation-simplification-design.md
src/interfaces/robot_interfaces/: CMakeLists.txt  package.xml
src/interfaces/robot_interfaces/msg/: Gimbal.msg  GimbalCmd.msg  Models.msg  RobotStateInfo.msg
src/navigation/nav2_plugins/: CMakeLists.txt  package.xml
src/navigation/nav2_plugins/include/nav2_plugins/bt/: custom_types.hpp  nav_utils.hpp
src/navigation/nav2_plugins/include/nav2_plugins/bt/action/: hold_stop_flag.hpp  pub_spin_speed.hpp  pub_twist.hpp  publish_nav_goal.hpp  select_fixed_path.hpp  select_path_goal_pose.hpp  select_patrol_path.hpp  send_nav2_goal.hpp  send_nav_through_poses.hpp
src/navigation/nav2_plugins/include/nav2_plugins/bt/condition/: is_path_goal_reached.hpp
src/navigation/nav2_plugins/include/nav2_plugins/bt/control/: recovery_node.hpp
src/navigation/nav2_plugins/include/nav2_plugins/bt/decorator/: rate_controller.hpp
src/navigation/nav2_plugins/src/behaviors/: back_up_free_space.cpp
src/navigation/nav2_plugins/src/bt/action/: hold_stop_flag.cpp  pub_spin_speed.cpp  pub_twist.cpp  publish_nav_goal.cpp  select_fixed_path.cpp  select_path_goal_pose.cpp  select_patrol_path.cpp  send_nav2_goal.cpp  send_nav_through_poses.cpp
src/navigation/nav2_plugins/src/bt/condition/: is_path_goal_reached.cpp
src/navigation/nav2_plugins/src/bt/control/: recovery_node.cpp
src/navigation/nav2_plugins/src/bt/decorator/: rate_controller.cpp
src/navigation/nav2_plugins/src/layers/: intensity_voxel_layer.cpp
src/navigation/nav_bringup/: CMakeLists.txt  package.xml
src/navigation/nav_bringup/behavior_trees/: legged_navigate_w_replanning_and_recovery.xml
src/navigation/nav_bringup/config/: nav2_params.legged.yaml  nav2_params.legged_sim.yaml  nav2_params.reality.yaml  nav2_params.simulation.yaml
src/navigation/nav_bringup/description/: quadruped.urdf
src/navigation/nav_bringup/launch/: joy_teleop_launch.py  legged_localization_launch.py  legged_navigation_launch.py  legged_slam_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  simulation.launch.py  slam_launch.py
src/navigation/nav_bringup/map/: README.txt
src/navigation/omni_pid_pursuit_controller/: CMakeLists.txt  package.xml
src/navigation/omni_pid_pursuit_controller/src/: omni_pid_pursuit_controller.cpp  pid.cpp
src/navigation/point_lio/src/: laserMapping.cpp  li_initialization.cpp  li_initialization.h  parameters.cpp  parameters.h
src/navigation/pointcloud_to_laserscan/src/: laserscan_to_pointcloud_node.cpp  pointcloud_to_laserscan_node.cpp
src/navigation/sensor_scan_generation/src/: sensor_scan_generation.cpp
src/navigation/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
src/navigation/teleop_twist_joy/: CMakeLists.txt  package.xml
(+10 files in other folders)
